# silo_minimum

./: CMakeLists.txt  README.md  classes.h  consts.h  enclave.cpp  enclave.h  main.cpp  main.h
App/: logger_affinity.cpp  main.cpp  main.h  result.cpp  util.cpp
App/include/: logger_affinity.h  main.h  util.h
App/utility/: app_util.cpp  app_util.h
Enclave/: OCH.cpp  OCH.h  enclave.cpp  enclave.h  log_buffer.cpp  logger.cpp  notifier.cpp  transaction.cpp  util.cpp
Enclave/common/: hash.cpp  hash.h
Enclave/include/: atomic_tool.h  atomic_wrapper.h  cache_line_size.h  common.h  heap_object.hh  log.h  log_buffer.h  log_queue.h  log_writer.h  logger.h  notifier.h  procedure.h  random.h  silo_op_element.h  status.h  tpcc.h  transaction.h  tsc.h  tuple.h  tuple_body.hh  util.h  workload.hh  ycsb.h  zipf.h
Enclave/include/tpcc/: tpcc_common.hh  tpcc_initializer.hh  tpcc_query.hh  tpcc_tables.hh  tpcc_tx_neworder.hh  tpcc_tx_payment.hh  tpcc_util.hh
Enclave/masstree/: main.cpp
Enclave/masstree/include/: masstree_key.h  masstree_node.h  masstree_value.h
Enclave/silo_cc/: silo_log_buffer.cpp  silo_notifier.cpp  silo_transaction.cpp
Enclave/silo_cc/include/: silo_procedure.h  silo_transaction.h
Include/: consts.h  consts_benchmark.h  result.h  structures.h
